--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -2,3 +2,24 @@
 @import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 /*--------------------------------------Heading */
+
+nav a img {
+    height: 250px;
+    text-align: center;
+}
+
+/*----------------------------------------Footer */
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom:0;
+    width: 100%;
+    text-align: center;
+    background-color: #676767;
+    color: #fafafa;
+    min-height: 120px;
+    margin: 0;
+    padding:20px;
+    
+}
