--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -5,21 +5,32 @@
 
 nav a img {
     height: 250px;
-    text-align: center;
 }
 
 /*----------------------------------------Footer */
 
 footer {
-    position: fixed;
-    left: 0;
-    bottom:0;
-    width: 100%;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: #676767;
+  color: white;
+  text-align: center;
+}
+
+.social-networks {
     text-align: center;
-    background-color: #676767;
-    color: #fafafa;
-    min-height: 120px;
-    margin: 0;
-    padding:20px;
-    
+    vertical-align: center;
+}
+
+.social-networks li {
+  display: inline;
+}
+
+.social-networks i {
+  font-size: 200%;
+  margin: 2%;
+  padding: 3%;
+  color: #ffffff;
 }
