--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -91,6 +91,38 @@ hr {
   border-radius: 50%;
 }
 
+@media screen and (max-width: 1393px ){
+    #band-members{
+        width: 65%;
+        height: 1200px;
+        margin: 0 auto;
+    }
+
+    #band-name {
+        padding: 30px 0;
+        margin-top: 0;
+    }
+
+    #left-about, #right-about {
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    #center-about {
+        clear: both;
+        width: 100%;
+        float: left;
+        padding: 0;
+    }
+
+    hr {
+        display: none;
+    }
+}
+
+
+
 
 
 /*----------------------------------------Footer */
