--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -147,6 +147,14 @@ hr {
     }
 }
 
+#book-us-form {
+    padding: 0 15px 0 15px;
+}
+
+.submit-button {
+    color: #676767;
+    background-color: aqua; 
+}
 
 
 /*----------------------------------------Footer */
@@ -156,8 +164,6 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #676767;
-  color: white;
   text-align: center;
 }
 
@@ -172,5 +178,6 @@ footer {
 
 .social-networks i {
   font-size: 200%;
-  color: #ffffff;
+  color: #676767;
+  margin: 0 25px 0 25px;
 }
