--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -12,6 +12,10 @@
 
 /*--------------------------------------Heading */
 
+nav {
+    background-color: white;
+}
+
 .nav-link {
     font-size: 20px;
     font-weight: 500;
