Small css changes on forms page and change of label names

--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -156,9 +156,12 @@ hr {
 }
 
 .submit-button {
+    margin: auto;
     color: #676767;
     background-color: aqua; 
 }
+
+.btn {margin: auto}
 
 
 /*----------------------------------------Footer */
