--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -25,130 +25,20 @@ nav {
 /*----------------------------------------Section */
 
 section {
-    margin-top: 12rem;
+    margin-top: 10rem;
+    background-color:#F5F5F5;
 }
 
 #band-members {
     height: 600px;
 }
 
-#left-about {
-  padding-top: 30px;
-  width: 33%;
-  float: left;
-}
 
-#right-about {
-  padding-top: 30px;
-  width: 33%;
-  float: right;
-}
-
-#center-about {
-  width: 33%;
-  margin: 0 auto;
-}
-
-hr {
-  border-top: 1px solid #777777;
-  width: 100%;
-  margin: 5px 0;
-}
-
-.left-about-heading {
-  width: 50%;
-  float: right;
-  line-height: 20px;
-  clear: both;
-  margin-bottom: 50px;
-}
-
-.right-about-heading {
-  width: 50%;
-  float: left;
-  line-height: 20px;
-  clear: both;
-  margin-bottom: 50px;
-}
-
-.right-about-heading h2 {
-  text-align: right;
-}
 
 #band-name {
   margin: 20px 0;
   text-align: center;
   font-size: 280%;
-}
-
-#circle-container {
-  width: 300px;
-  height: 300px;
-  padding: 20px;
-  border-style: solid;
-  border-color: #cccccc;
-  border-width: 1px;
-  border-radius: 50%;
-  margin: 0 auto;
-}
-
-#circle-cover-bg {
-  background: url("http://codeinstitute.s3.amazonaws.com/FundamentalsProjects/HTML-CSS/video-mask.png") no-repeat center center;
-  height: 100%;
-  border-radius: 50%;
-}
-
-@media screen and (max-width: 1393px ){
-    #band-members{
-        width: 65%;
-        height: 1200px;
-        margin: 0 auto;
-    }
-
-    #band-name {
-        padding: 30px 0;
-        margin-top: 0;
-    }
-
-    #left-about, #right-about {
-        width: 100%;
-        float: left;
-        padding: 0;
-    }
-
-    #center-about {
-        clear: both;
-        width: 100%;
-        float: left;
-        padding: 0;
-    }
-
-    hr {
-        display: none;
-    }
-}
-
-@media screen and (max-width: 943px) {
-    #band-members {
-        width: 90%;
-        height: 1200px;
-        margin: 0 auto;
-
-    }
-
-    .left-about-heading, .right-about-heading {
-        width: inherit;
-    }
-
-    .left-about-heading h2 , .right-about-heading h2 {
-        width: 100%;
-        text-align: center;
-    }
-
-    .left-about-heading p , .right-about-heading p {
-        text-align: center;
-        padding: 0 20px 0 20px;
-    }
 }
 
 #book-us-form {
