--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -7,7 +7,18 @@
   border: 0;
 }
 
+h2 {
+    text-align: center;
+    font-size: 35px;
+    margin: auto;
+}
 
+p {
+    text-align: center;
+    font-size: 15px;
+    margin: auto;
+    padding: 20px;
+}
 
 
 /*--------------------------------------Heading */
@@ -52,6 +63,16 @@ section {
 }
 
 .btn {margin: auto}
+
+.subheading {
+    margin-top: 25px;
+    margin-bottom: 25px;
+}
+
+.band-info {
+    border-radius: 25px;
+    background-color: #fff;
+}
 
 
 /*----------------------------------------Footer */
