--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -36,7 +36,7 @@ nav {
 /*----------------------------------------Section */
 
 section {
-    margin-top: 10rem;
+    margin-top: 8rem;
     background-color:#F5F5F5;
 }
 
@@ -53,7 +53,7 @@ section {
 }
 
 #book-us-form {
-    padding: 0 15px 0 15px;
+    padding: 15px 15px 0 15px;
 }
 
 .submit-button {
