--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -9,7 +9,7 @@
 
 h2 {
     text-align: center;
-    font-size: 35px;
+    font-size: 40px;
     margin: auto;
 }
 
@@ -72,6 +72,14 @@ section {
 .band-info {
     border-radius: 25px;
     background-color: #fff;
+}
+
+.paul-george {
+    max-height: 150px;
+    height: auto;
+    margin: 20px 20px 20px 20px;
+    border-radius: 25%;
+    float: right;
 }
 
 
