Add Discography subheading and grid structure with placeholder images&text

--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -19,6 +19,12 @@ h3 {
     margin: auto;
 }
 
+h4 {
+    text-align: center;
+    font-size: 15px;
+    margin: auto;
+}
+
 p {
     text-align: center;
     font-size: 15px;
