--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -24,6 +24,7 @@ h4 {
     font-size: 15px;
     margin: auto;
     padding: 5px;
+    color: black;
 }
 
 p {
@@ -70,11 +71,17 @@ section {
     padding: 15px 15px 0 15px;
 }
 
+.submit-button-rw {
+    padding: 20px 0 30px 0;
+}
+
 .submit-button {
     margin: 0 auto;
     color: #676767;
     background-color: aqua; 
 }
+
+
 
 .subheading {
     margin-top: 25px;
@@ -104,6 +111,16 @@ img .paul-george.img-fluid {
 .pjgr {
     max-height: 150px;
     border-radius: 25%;
+    max-width: 150px;
+}
+
+.album {
+    padding: 15px 0 20px 0;
+}
+
+.album-image {
+    max-height: 150px;
+    border-radius: 15%;
     max-width: 150px;
 }
 
