--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -21,8 +21,16 @@ h3 {
 
 h4 {
     text-align: center;
-    font-size: 15px;
+    font-size: 18px;
     margin: auto;
+    padding: 5px;
+    color: black;
+}
+
+h5 {
+    text-align: center;
+    font-size: 12px;
+    margin: 0 auto;
     padding: 5px;
     color: black;
 }
@@ -51,10 +59,6 @@ nav {
 section {
     margin-top: 8rem;
     background-color:#F5F5F5;
-}
-
-#band-members {
-    height: 700px;
 }
 
 #band-overview {
@@ -119,9 +123,9 @@ img .paul-george.img-fluid {
 }
 
 .album-image {
-    max-height: 150px;
-    border-radius: 15%;
-    max-width: 150px;
+    max-height: 250px;
+    border-radius: 10%;
+    max-width: 250px;
 }
 
 
