--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -128,6 +128,14 @@ img .paul-george.img-fluid {
     max-width: 250px;
 }
 
+.lg-vid {
+    padding: 46px 0 30px 0;
+}
+
+.sm-vid {
+    padding: 30px 0 46px 0;
+}
+
 
 /*----------------------------------------Footer */
 
