Add additional styling to home page section to enhance user exeperience on all devices

--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -112,7 +112,9 @@ img .paul-george.img-fluid {
     padding: 20px 0 20px 0;
 }
 
-
+.pjgrcl {
+    padding: 10px 0 10px 0;
+}
 
 .pjgr {
     max-height: 150px;
