--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -72,12 +72,6 @@ section {
     padding: 0 50px 0 50px;
 }
 
-#band-name {
-  margin: 20px 0;
-  text-align: center;
-  font-size: 280%;
-}
-
 .band-info {
     border-radius: 25px;
     background-color: #fff;
@@ -93,7 +87,7 @@ section {
 }
 
 .pjgrcl {
-    padding: 10px 0 10px 0;
+    padding: 10px 5px 10px 5px;
 }
 
 .pjgr {
@@ -136,6 +130,10 @@ section {
     .lgsize {
         width:560px;
         height: 315px;
+    }
+
+    hr {
+        display:none;
     }
 }
 
