--- a/beatles/assets/css/style.css
+++ b/beatles/assets/css/style.css
@@ -59,6 +59,7 @@ nav {
 section {
     margin-top: 8rem;
     background-color:#F5F5F5;
+    min-height: 777px;
 }
 
 .subheading {
@@ -172,7 +173,6 @@ section {
 /*----------------------------------------Footer */
 
 footer {
-  position: fixed;
   left: 0;
   bottom: 0;
   width: 100%;
@@ -191,5 +191,5 @@ footer {
 .social-networks i {
   font-size: 200%;
   color: #676767;
-  margin: 0 25px 0 25px;
+  margin: 10px 25px 0 25px;
 }
