--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,195 +1,199 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Exo:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
-
-*{
-  margin: 0;
-  padding: 0;
-  border: 0;
+* {
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
+
+/*--------------------------------------Text */
+
 h2 {
-    text-align: center;
-    font-size: 40px;
-    margin: auto;
+	text-align: center;
+	font-size: 40px;
+	margin: auto;
 }
 
 h3 {
-    text-align: center;
-    font-size: 25px;
-    margin: auto;
+	text-align: center;
+	font-size: 25px;
+	margin: auto;
 }
 
 h4 {
-    text-align: center;
-    font-size: 18px;
-    margin: auto;
-    padding: 5px;
-    color: black;
+	text-align: center;
+	font-size: 18px;
+	margin: auto;
+	padding: 5px;
+	color: black;
 }
 
 h5 {
-    text-align: center;
-    font-size: 12px;
-    margin: 0 auto;
-    padding: 5px;
-    color: black;
+	text-align: center;
+	font-size: 12px;
+	margin: 0 auto;
+	padding: 5px;
+	color: black;
 }
 
 p {
-    text-align: center;
-    font-size: 15px;
-    margin: auto;
+	text-align: center;
+	font-size: 15px;
+	margin: auto;
+	font-family: R
 }
 
 
 /*--------------------------------------Heading */
 
 nav {
-    background-color: white;
+	background-color: white;
 }
 
 .nav-link {
-    font-size: 20px;
-    font-weight: 500;
-    margin: 2rem;
+	font-size: 20px;
+	font-weight: 500;
+	margin: 2rem;
 }
+
 
 /*----------------------------------------Section */
 
 section {
-    margin-top: 8rem;
-    background-color:#F5F5F5;
-    min-height: 777px;
+	margin-top: 8rem;
+	background-color: #F5F5F5;
+	min-height: 777px;
 }
 
 .subheading {
-    margin-top: 25px;
-    margin-bottom: 25px;
+	margin-top: 25px;
+	margin-bottom: 25px;
 }
+
 
 /*----------------------------------------Section Home Page */
 
 #band-overview {
-    padding: 0 50px 0 50px;
+	padding: 0 50px 0 50px;
 }
 
 .band-info {
-    border-radius: 25px;
-    background-color: #fff;
-    padding: 15px;
+	border-radius: 25px;
+	background-color: #fff;
+	padding: 15px;
 }
 
 .band-info-p {
-    padding: 10px;
+	padding: 10px;
 }
 
 .pjgrrw {
-    padding: 20px 0 20px 0;
+	padding: 20px 0 20px 0;
 }
 
 .pjgrcl {
-    padding: 10px 5px 10px 5px;
+	padding: 10px 5px 10px 5px;
 }
 
 .pjgr {
-    max-height: 150px;
-    border-radius: 25%;
-    max-width: 150px;
+	max-height: 150px;
+	border-radius: 25%;
+	max-width: 150px;
 }
 
 
 /*----------------------------------------Section Discography Page */
 
 .album {
-    padding: 15px 0 20px 0;
+	padding: 15px 0 20px 0;
 }
 
 .album-image {
-    max-height: 250px;
-    border-radius: 10%;
-    max-width: 250px;
+	max-height: 250px;
+	border-radius: 10%;
+	max-width: 250px;
 }
 
 
 /*----------------------------------------Section Media Page */
 
 .lg-vid {
-    padding: 46px 0 30px 0;
+	padding: 46px 0 30px 0;
 }
 
 .lgsize {
-    width:784px;
-    height: 441px;
+	width: 784px;
+	height: 441px;
 }
 
 .smsize {
-    width:560px;
-    height:315px;
+	width: 560px;
+	height: 315px;
 }
 
-@media screen and (max-width:943px){
-    .lgsize {
-        width:560px;
-        height: 315px;
-    }
-
-    hr {
-        display:none;
-    }
+@media screen and (max-width:943px) {
+	.lgsize {
+		width: 560px;
+		height: 315px;
+	}
+	hr {
+		display: none;
+	}
 }
 
-@media screen and (max-width:600px){
-    .lgsize, .smsize {
-        width:336px;
-        height: 189px;
-    }
+@media screen and (max-width:600px) {
+	.lgsize,
+	.smsize {
+		width: 336px;
+		height: 189px;
+	}
 }
 
 .sm-vid {
-    padding: 30px 0 46px 0;
+	padding: 30px 0 46px 0;
 }
+
 
 /*----------------------------------------Section Book Us Page */
 
 #book-us-form {
-    padding: 15px 15px 0 15px;
+	padding: 15px 15px 0 15px;
 }
 
 .submit-button-rw {
-    padding: 20px 0 30px 0;
+	padding: 20px 0 30px 0;
 }
 
 .submit-button {
-    margin: 0 auto;
-    color: #fff;
-    background-color: #29CF1E; 
+	margin: 0 auto;
+	color: #fff;
+	background-color: #29CF1E;
 }
 
 .frm-pad {
-    padding: 10px 0 10px 0;
+	padding: 10px 0 10px 0;
 }
 
 
 /*----------------------------------------Footer */
 
 footer {
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  text-align: center;
+	left: 0;
+	bottom: 0;
+	width: 100%;
+	text-align: center;
 }
 
 .social-networks {
-    text-align: center;
-    vertical-align: center;
+	text-align: center;
+	vertical-align: center;
 }
 
 .social-networks li {
-  display: inline;
+	display: inline;
 }
 
 .social-networks i {
-  font-size: 200%;
-  color: #676767;
-  margin: 10px 25px 0 25px;
+	font-size: 200%;
+	color: #676767;
+	margin: 10px 25px 0 25px;
 }
